tests/lean/protectedAlias.lean.expected.out
Nat.double (x : Nat) : Nat
protectedAlias.lean:9:7-9:13: error: unknown identifier 'double'
